--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server --watch db.json --port 3333"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.1",
@@ -24,6 +25,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "json-server": "^0.17.0",
     "typescript": "4.8.2"
   }
 }
